Added information about commands and a footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
                 <h1>Commands</h1>
                 <p><b>!lovecheck [Person1] [Person2]</b><br>
                 Check whether two individuals are actually made for each other! <font color="red">&#10084;</font></p>
+                <p><b>!roll [Amount of D6]</b><br>
+                Rolls some dices according to Shadowrun.</p>
+                <p><b>!choose [Item1] [Item2] ... [ItemN]</b><br>
+                Picks an item out of a given list to make decisions a lot easier.</p>
+                <p><b>!ltheme (save)</b><br>
+                Picks a theme out of an amount of different movie themes for a possible movie night (and saves them).</p>
+                <p><b>!basterds</b><br>
+                Shows the current movie theme and additional information about the event.</p>
+                <p><b>!shibe</b><br>
+                Posts a random picture of a shibe from the /r/shiba subreddit.</p>
+                <p><b>!quote</b><br>
+                Posts a random quote by a guild member.</p>
+                <p><b>A couple more insider-ish commands</b></p>
             </div>
+        </div>
+        <div id="footer">
+            &copy; 2016 Artur Solomonik. All rights reserved.<br>
+            Made with <font color="red">&#10084;</font> by <a href="https://github.com/Arduqq">Me</a>!
         </div>
     </body>
 </html>
