Added a possible Layout for the inventory system

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body background="img/bg.png">
         <center><img id="header" src="img/header.png"></center>
-        <div id="wrapper">
+        <div class="wrapper">
             <div id="planets">
                 <a target="_blank" href="https://github.com/Arduqq/gregorius-discordbot">
                     <div id="github"></div>
@@ -21,7 +21,7 @@
                 Rolls some dices according to Shadowrun.</p>
                 <p><b>!choose [Item1] [Item2] ... [ItemN]</b><br>
                 Picks an item out of a given list to make decisions a lot easier.</p>
-                <p><b>!ltheme (save)</b><br>
+                <p><b>!theme (save)</b><br>
                 Picks a theme out of an amount of different movie themes for a possible movie night (and saves them).</p>
                 <p><b>!basterds</b><br>
                 Shows the current movie theme and additional information about the event.</p>
@@ -32,7 +32,7 @@
                 <p><b>A couple more insider-ish commands</b></p>
             </div>
         </div>
-        <div id="footer">
+        <div class="footer">
             &copy; 2016 Artur Solomonik. All rights reserved.<br>
             Made with <font color="red">&#10084;</font> by <a href="https://github.com/Arduqq">Me</a>!
         </div>
