Reinforced layout, added some sprites and tooltips

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
         <center><img id="header" src="img/header.png"></center>
         <div class="wrapper">
             <div id="planets">
+                <a href="/statistics/">
+                    <div title="Gildeninventar" id="stuff"></div>
+                </a>
                 <a target="_blank" href="https://github.com/Arduqq/gregorius-discordbot">
-                    <div id="github"></div>
+                    <div title="Github-Repository" id="github"></div>
                 </a>
             </div>
             <div id="doc">
