--- a/statistics/index.html
+++ b/statistics/index.html
@@ -8,7 +8,7 @@
     <body background="../img/bg.png">
         <center><img id="header" src="img/beute.png"></center>
         <div class="wrapper">
-            <a href="../">Zurück</a>
+            <a class="backbutton" href="../">&#8678; Back</a>
             <div class="member">
                 <span class="username">Dummy</span>
                 <img class="avatar" src="img/avatar.png">
@@ -16,10 +16,19 @@
                 <tr>
                     <th>
                         <div class="tooltip"><img src="img/heart.gif" class="item">
-                        <span class="tooltiptext">Kleiner als 3</span></div>
+                        <span class="tooltiptext">Kleiner als 3</span>
+                        <span class="amount">1</span></div>
                     </th>
-                    <th></th>
-                    <th></th>
+                    <th>
+                        <div class="tooltip"><img src="img/vhs.png" class="item">
+                        <span class="tooltiptext">Ausgeleierte VHS-Kassette</span>
+                        <span class="amount">4</span></div>
+                    </th>
+                    <th>
+                        <div class="tooltip"><img src="img/pillow.png" class="item">
+                        <span class="tooltiptext">Kirschkernkissen</span>
+                        <span class="amount">2</span></div>
+                    </th>
                     <th></th>
                     <th></th>
                     <th></th>
