--- a/index.html
+++ b/index.html
@@ -19,19 +19,23 @@
             <div id="doc">
                 <h1>Commands</h1>
                 <p><b>!lovecheck [Person1] [Person2]</b><br>
-                Check whether two individuals are actually made for each other! <font color="red">&#10084;</font></p>
+                Check whether two individuals are actually made for each other! <font color="red">&#10084;</font> (Laufamholzers excluded)</p>
                 <p><b>!roll [Amount of D6]</b><br>
                 Rolls some dices according to Shadowrun.</p>
+                <p><b>!coinflip</b><br>
+                Flips a fucking coin.</p>
                 <p><b>!choose [Item1] [Item2] ... [ItemN]</b><br>
                 Picks an item out of a given list to make decisions a lot easier.</p>
-                <p><b>!theme (save)</b><br>
-                Picks a theme out of an amount of different movie themes for a possible movie night (and saves them).</p>
+                <p><b>!meme</b><br>
+                Fetches a semi-dank meme from imgur.</p>
+                <p><b>!shibe</b><br>
+                Posts a cute image of a shibe.</p>
                 <p><b>!basterds</b><br>
-                Shows the current movie theme and additional information about the event.</p>
+                Shows some information concerning the movie night.</p>
                 <p><b>!shibe</b><br>
                 Posts a random picture of a shibe from the /r/shiba subreddit.</p>
-                <p><b>!quote</b><br>
-                Posts a random quote by a guild member.</p>
+                <p><b>!quote (add)</b><br>
+                Posts a random quote by a guild member or adds one to the list.</p>
                 <p><b>A couple more insider-ish commands</b></p>
             </div>
         </div>
