--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="/statistics/index.html">
                     <div title="Gildeninventar" id="stuff"></div>
                 </a>
-                <a target="_blank" href="https://github.com/Arduqq/gregorius-discordbot">
+                <a target="_blank" href="https://github.com/Arduqq/gregorius-bot">
                     <div title="Github-Repository" id="github"></div>
                 </a>
             </div>
@@ -32,8 +32,8 @@
                 Shows some information concerning the movie night.</p>
                 <p><b>!shibe</b><br>
                 Posts a random picture of a shibe from the /r/shiba subreddit.</p>
-                <p><b>!quote (add)</b><br>
-                Posts a random quote by a guild member or adds one to the list.</p>
+                <p><b>!quote (add | id [ID])</b><br>
+                Posts a random quote by a guild member, adds one to the list or quotes a channel message by ID.</p>
                 <p><b>A couple more insider-ish commands</b></p>
             </div>
         </div>
