--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
                 Shows some information concerning the movie night.</p>
                 <p><b>!shibe</b><br>
                 Posts a random picture of a shibe from the /r/shiba subreddit.</p>
+                <p><b>!puss</b><br>
+                Posts a random picture of a ḱitty cat from the /r/cats subreddit.</p>
+                <p><b>!capybara</b><br>
+                Posts a random picture of a capybara from the /r/capybara subreddit.</p>
                 <p><b>!quote (add | id [ID])</b><br>
                 Posts a random quote by a guild member, adds one to the list or quotes a channel message by ID.</p>
+                <p><b>!sr</b><br>
+                Lists the current Shadowrun Adventure and its players.</p>
+                <p><b>!punch [@mention]</b><br>
+                Punches a member. Watch out for broken ribs.</p>
                 <p><b>A couple more insider-ish commands</b></p>
             </div>
         </div>
