--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <center><img id="header" src="img/header.png"></center>
         <div class="wrapper">
             <div id="planets">
-                <a href="/statistics/index.html">
+                <a href="statistics/index.html">
                     <div title="Gildeninventar" id="stuff"></div>
                 </a>
                 <a target="_blank" href="https://github.com/Arduqq/gregorius-bot">
